Corrected FF-fix for footnote collapse.

--- a/statistics-web/src/main/webapp/css/inera-statistics.css
+++ b/statistics-web/src/main/webapp/css/inera-statistics.css
@@ -1699,4 +1699,4 @@ input[type="radio"], input[type="checkbox"] {
 }
 #readMore { height: auto; }
 
-#chart-footnote-text.in.collapse { overflow: visible; position: relative; top: 20px; }
+#chart-footnote-text.in.collapse { overflow: visible; position: relative; display: inline-block; }
